# eid-image-extractor

./: .gitignore  README.md  eid-image-extractor.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  test.yml
src/eid_image_extractor/: __init__.py  __main__.py  eid.py  filesystem.py
tests/: test_cli.py
