# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eid-image-extractor"
version = "1.0.1"
description = "A simple python script to extract the image from a Belgian E-ID card "
readme = "README.md"
authors = [{ name = "Bram Oosterlynck", email = "bram.oosterlynck@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["identity", "eid", "beid"]
dependencies = [
  "certifi>=2024.8.30",
  "charset-normalizer>=3.4.0",
  "click>=8.1.7",
  "eidreader>=1.0.8",
  "idna>=3.10",
  "PyKCS11>=1.5.17",
  "requests>=2.32.3",
  "urllib3>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/boosterl/eid-image-extractor"

[project.scripts]
eid-image-extractor = "eid_image_extractor.__main__:main"
